fix(epsagon): align property names with API changes

--- a/web-src/src/App.css
+++ b/web-src/src/App.css
@@ -23,7 +23,10 @@
 }
 
 .pathCell {
-  word-break: break-all;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .indentOffset {
